~ fixed header on mobile

--- a/src/sass/welanstrap/_typography.scss
+++ b/src/sass/welanstrap/_typography.scss
@@ -67,7 +67,7 @@ h5{
 }
 
 h6{
-    @include ms-respond(font-size, 0);
+    @include ms-respond(font-size, -1);
     font-weight: $font-weight-normal;
     line-height: 1.3;
 }
